@@ -14,6 +14,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 @Component
 public class DataInitializer {
@@ -33,7 +34,7 @@ public class DataInitializer {
     @PostConstruct
     public void init(){
 
-        Random random = new Random();
+         Random random = new Random();
 
         for(int i=1;i<=10;i++){
             Country country = new Country(String.format("Country %d",i),String.format("Continent %d",i));
@@ -41,9 +42,11 @@ public class DataInitializer {
             Author author = new Author(String.format("AuthorName %d",i),String.format("AuthorSurname %d",i),country);
             authorList.add(author);
 
-            Category category = Arrays.stream(Category.values()).toList().get(random.nextInt(0,7));
-
-            bookList.add(new Book(String.format("BookName %d",i),category,author,random.nextInt(1,21)));
+            Category category = Arrays.stream(Category.values()).collect(Collectors.toList()).get(random.nextInt(7));
+            Book book = new Book(String.format("BookName %d",i),category,author,random.nextInt(21));
+            if (book.getAvailableCopies()==0)
+                book.setAvailableCopies(1);
+            bookList.add(book);
         }
         authorRepository.saveAll(authorList);
         bookRepository.saveAll(bookList);
