@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @CrossOrigin(origins = "http://localhost:3000")
@@ -60,6 +61,6 @@ public class BookControllerREST {
 
     @GetMapping("/allCategories")
     public List<Category> getAllCategories(){
-        return Arrays.stream(Category.values()).toList();
+        return Arrays.stream(Category.values()).collect(Collectors.toList());
     }
 }
